--- a/LSIS/public_html/index.html
+++ b/LSIS/public_html/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="BUTTON.css" rel="stylesheet" type="text/css"/>
-
+        <script src="script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
 
@@ -14,8 +14,8 @@
 
     <body> 
         <div class="container"> 
-            <div class="sky"> <button class="button button--pan"><span style="color:white">Entrar</span></button>
-
+            <div class="sky"> 
+                <a class="button button--pan" style="color:black" id="button" href="TESTES.html"><div >Testes</div></a>
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
