alteração 1Teste e index. Adição dos restantes ficheiros

--- a/LSIS/public_html/index.html
+++ b/LSIS/public_html/index.html
@@ -15,16 +15,17 @@
     <body> 
         <div class="container"> 
             <div class="sky"> 
-                <a class="button button--pan" style="color:black" id="button" href="TESTES.html"><div >Testes</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div>Registar Competição</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterTeam.html"><div>Registar Equipa</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterRobot.html"><div>Registar Robô</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Info.html"><div>Informações</div></a>
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
                         <img src="car_wheel_left.png" alt="">
                     </div>
-
                 </div>
             </div>
         </div>
     </body>
-
 </html>
