Adicionar alguns UCs

--- a/LSIS/public_html/RegisterCompetition.html
+++ b/LSIS/public_html/RegisterCompetition.html
@@ -32,7 +32,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <label for="nomeId" id="nomeL">Nome:</label>
                             <input type="text" id="nomeId" name="nome"/>
                             <label for="dataCriacaoId" id="dataCriacaoL">Data de Criação:</label>
-                            <input type="text" id="dataCriacaoId" name="dataNasc"/>
+                            <input type="date" id="dataCriacaoId" name="dataNasc"/>
                             <input type="submit" value="Registar" />                      
                         </form>
                     </div>
