--- a/LSIS/public_html/CompetitionSubscribe.html
+++ b/LSIS/public_html/CompetitionSubscribe.html
@@ -35,20 +35,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <p id="pCompetitionTableInfo" style="display:none">Competitions available at the moment</p>
                         <table id ="tCompetitionTableInfo" style="display:none">
                             <tr>
-                                <th>Pisos</th>
-                                <th>Zona A</th> 
-                                <th>Zona B</th>
-                                <th>Zona C </th>
+                                <th>Id Competição</th>
+                                <th>Nome Competição</th> 
+                                <th>Data Criação</th>
                             </tr>
                             <tr>
                                 <th>1</th>
                                 <td></td>
                                 <td></td>
-                                <td></td>
                             </tr>
                             <tr>
                                 <th>2</th>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
