--- a/LSIS1/src/main/java/webroot/registerRobot.html
+++ b/LSIS1/src/main/java/webroot/registerRobot.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="registerCompetition.js"></script>      
+        <script src="registerRobot.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
@@ -18,7 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class='pictit'>
                     <img alt="nature" src="images/4752495707_72c9b36858_b.jpg" height="200" width="300">
                 </div>
-                <h5>Competição</h5>
+                <h5>Robô</h5>
                 <h6>Registar</h6>
             </div>
             <div class="row">
@@ -28,11 +28,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="column4">     
                     <div class='form'>                        
                         <hr>
-                        <form id="registerCompetitionForm" name="registerCompetitionForm" action="javascript:Enviar()">
+                        <form id="registerRobotForm" name="registerRobotForm" action="javascript:Enviar()">
+                            <label for="idEquipaId" id="idEquipaL"> ID da Equipa:</label>
+                            <input type="text" id="idEquipaId" name="nome"/>
                             <label for="nomeId" id="nomeL">Nome:</label>
                             <input type="text" id="nomeId" name="nome"/>
-                            <label for="dataCriacaoId" id="dataCriacaoL">Data de Criação:</label>
-                            <input type="date" id="dataCriacaoId" name="dataNasc"/>
+                            <label for="macAddressId" id="macAddressL">Mac Address:</label>
+                            <input type="text" id="macAddressId" name="nome"/>
                             <input type="submit" value="Registar" />                      
                         </form>
                     </div>
