--- a/LSIS1/src/main/java/webroot/Info.html
+++ b/LSIS1/src/main/java/webroot/Info.html
@@ -8,9 +8,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="utf-8">
         <title>Customer Page</title>
         <link rel="icon" type="image/png" href="images/319-3194221_animated-smiley-face-wink.png">
-        <link type="text/css" href="info.css" rel="stylesheet">
+        <link type="text/css" href="CSS/info.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="info.js"></script>    
+        <script src="JavaScript/info.js"></script>    
     </head>    
     <body>
         <div class='blog'>
