--- a/LSIS1/src/main/java/webroot/RegisterCompetition.html
+++ b/LSIS1/src/main/java/webroot/RegisterCompetition.html
@@ -8,9 +8,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="utf-8">
         <title>Register</title>
         <link rel="icon" type="image/png" href="icon/img_315977.png">
-        <link type="text/css" href="register_style.css" rel="stylesheet">
+        <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="registerCompetition.js"></script>      
+        <script src="JavaScript/registerCompetition.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
