--- a/LSIS1/src/main/java/webroot/RobotManagment.html
+++ b/LSIS1/src/main/java/webroot/RobotManagment.html
@@ -9,9 +9,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="images/319-3194221_animated-smiley-face-wink.png">
-        <link type="text/css" href="info.css" rel="stylesheet">
+        <link type="text/css" href="CSS/info.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="RobotManagment.js"></script>
+        <script src="JavaScript/RobotManagment.js"></script>
     </head>
     <body>
         <div>
