--- a/LSIS1/src/main/java/webroot/TESTES.html
+++ b/LSIS1/src/main/java/webroot/TESTES.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Testes</title>
-        <link href="testes.css" rel="stylesheet" type="text/css"/>
+        <link href="CSS/testes.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
       <h1>Testes do ROBCOP</h1>
