--- a/LSIS1/src/main/java/webroot/Team.html
+++ b/LSIS1/src/main/java/webroot/Team.html
@@ -8,10 +8,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>Team</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="script.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
+        <script src="JavaScript/script.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="CSS/style.css">
+        <script src="JavaScript/script.js"></script>
     </head>
     <body>
         <div>
