--- a/LSIS1/src/main/java/webroot/TeamInfo.html
+++ b/LSIS1/src/main/java/webroot/TeamInfo.html
@@ -9,9 +9,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="icon/img_315977.png">
-        <link type="text/css" href="register_style.css" rel="stylesheet">
+        <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="TeamInfo.js"></script>  
+        <script src="JavaScript/TeamInfo.js"></script>  
     </head>
     <body>
     <body>
