--- a/LSIS1/src/main/java/webroot/index.html
+++ b/LSIS1/src/main/java/webroot/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="script.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
+        <script src="JavaScript/script.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="CSS/style.css">
+        <script src="JavaScript/script.js"></script>
 
         <title>ROBOT</title>
     </head>
