--- a/LSIS1/src/main/java/webroot/registerRobot.html
+++ b/LSIS1/src/main/java/webroot/registerRobot.html
@@ -6,11 +6,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html lang="pt">
     <head>
         <meta charset="utf-8">
-        <title>Register</title>
+        <title>Register Robot</title>
         <link rel="icon" type="image/png" href="icon/img_315977.png">
-        <link type="text/css" href="register_style.css" rel="stylesheet">
+        <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="registerRobot.js"></script>      
+        <script src="JavaScript/registerRobot.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
@@ -18,7 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class='pictit'>
                     <img alt="nature" src="images/4752495707_72c9b36858_b.jpg" height="200" width="300">
                 </div>
-                <h5>Robô</h5>
+                <h5>Robot</h5>
                 <h6>Registar</h6>
             </div>
             <div class="row">
