--- a/LSIS1/src/main/java/webroot/index.html
+++ b/LSIS1/src/main/java/webroot/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="CSS/style.css">
         <script src="JavaScript/script.js"></script>
 
-        <title>ROBOT</title>
+        <title>Robot</title>
     </head>
 
     <body> 
@@ -22,7 +22,7 @@
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
-                        <img src="car_wheel_left.png" alt="">
+                        <img src="../Imagens/car_wheel_left.png" alt="">
                     </div>
                 </div>
             </div>
