--- a/LSIS1/webroot/index.html
+++ b/LSIS1/webroot/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="script.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
+        <script src="JavaScript/script.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="CSS/style.css">
+        <script src="JavaScript/script.js"></script>
 
         <title>ROBOT</title>
     </head>
@@ -15,16 +15,17 @@
     <body> 
         <div class="container"> 
             <div class="sky"> 
-                <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div >Registar Competição</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div>Registar Competição</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterTeam.html"><div>Registar Equipa</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="RegisterRobot.html"><div>Registar Robô</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Info.html"><div>Informações</div></a>
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
-                        <img src="car_wheel_left.png" alt="">
+                        <img src="../Imagens/car_wheel_left.png" alt="">
                     </div>
-
                 </div>
             </div>
         </div>
     </body>
-
 </html>
