--- a/LSIS1/src/main/java/webroot/Info.html
+++ b/LSIS1/src/main/java/webroot/Info.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="icon" type="image/png" href="images/319-3194221_animated-smiley-face-wink.png">
         <link type="text/css" href="CSS/info.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/info.js"></script>    
+        <script src="JavaScript/Info.js"></script>    
     </head>    
     <body>
         <div class='blog'>
