--- a/LSIS1/src/main/java/webroot/RegisterRound.html
+++ b/LSIS1/src/main/java/webroot/RegisterRound.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/registerCompetition.js"></script>
+        <script src="JavaScript/RegisterRound.js"></script>
     </head>
     <body>
         <div class='blog'>
@@ -29,9 +29,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <div class="column4">     
                     <div class='form'>                        
                         <hr>
-                        <form id="registerRoundForm" name="registerRoundForm" action="javascript:Enviar()">
+                        <form id="registerRoundFormId" name="registerRoundForm" action="javascript:Enviar()">
                             <label for="competitionId" id="competitionIdL">ID da Competição:</label>
-                            <input type="text" id="competitionId" name="IdCompeticao"/>
+                            <input type="text" id="competitionId" name="competicaoId"/>
                             <label for="roundType"><b>Tipo de Ronda</b></label><span style="color: red !important; display: inline; float: none;"></span>
                             <br>
                             <select id="RoundType" name="Round">
