--- a/LSIS1/src/main/java/webroot/RegisterTeam.html
+++ b/LSIS1/src/main/java/webroot/RegisterTeam.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/registerTeam.js"></script>      
+        <script src="JavaScript/RegisterTeam.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
@@ -30,7 +30,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <hr>
                         <form id="registerTeamForm" name="registerTeamForm" action="javascript:Enviar()">
                             <label for="nomeId" id="nomeL">Nome:</label>
-                            <input type="text" id="nomeId" name="nome"/>
+                            <input type="text" id="nomeId" name="nomeEquipa"/>
                             <input type="submit" value="Registar" />                      
                         </form>
                     </div>
