--- a/LSIS1/src/main/java/webroot/RobotManagment.html
+++ b/LSIS1/src/main/java/webroot/RobotManagment.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="icon" type="image/png" href="images/319-3194221_animated-smiley-face-wink.png">
         <link type="text/css" href="CSS/info.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/RobotManagment.js"></script>
+        <script src="JavaScript/RobotManagement.js"></script>
     </head>
     <body>
         <div>
@@ -64,10 +64,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                             <input type="text" id="teamNameId" name="teamName"/>
 
                             <label for="robotNameId" id="robotNameL">Robot Name:</label>
-                            <input type="text" id="robotNameId" name="Robotname"/>
+                            <input type="text" id="robotNameId" name="robotName"/>
 
                             <label for="macAddressId" id="macAddressIdL">Mac Address:</label>
-                            <input type="text" id="macAddressId" name="MacAddress"/>
+                            <input type="text" id="macAddressId" name="macAddress"/>
                             <input type="submit" value='Alterar'>
                         </form>
                     </div>
