--- a/LSIS1/src/main/java/webroot/RegisterCompetition.html
+++ b/LSIS1/src/main/java/webroot/RegisterCompetition.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/registerCompetition.js"></script>      
+        <script src="JavaScript/RegisterCompetition.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
@@ -28,11 +28,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="column4">     
                     <div class='form'>                        
                         <hr>
-                        <form id="registerCompetitionForm" name="registerCompetitionForm" action="javascript:Enviar()">
+                        <form id="registerCompetitionFormId" name="registerCompetitionForm" action="javascript:Enviar()">
                             <label for="nomeId" id="nomeL">Nome:</label>
-                            <input type="text" id="nomeId" name="nome"/>
+                            <input type="text" id="nomeCompeticaoId" name="nomeCompeticaoId"/>
                             <label for="dataCriacaoId" id="dataCriacaoL">Data de Criação:</label>
-                            <input type="date" id="dataCriacaoId" name="dataNasc"/>
+                            <input type="date" id="dataCriacaoId" name="dataCriacaoId"/>
                             <input type="submit" value="Registar" />                      
                         </form>
                     </div>
