--- a/LSIS1/src/main/java/webroot/Team.html
+++ b/LSIS1/src/main/java/webroot/Team.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
         <script src="JavaScript/script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="CSS/style.css">
-        <script src="JavaScript/script.js"></script>
+        <script src="JavaScript/Script.js"></script>
     </head>
     <body>
         <div>
