--- a/LSIS1/src/main/java/webroot/TeamInfo.html
+++ b/LSIS1/src/main/java/webroot/TeamInfo.html
@@ -41,9 +41,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                             <input type="text" id="teamNameId" name="teamNameId"/>
                             <input type="submit" value="Alterar">
                         </form>
-
                     </div>
                 </div>
+                <div class="row" id="infoPanel"></div>
             </div>
         </div>
     </body>
