--- a/LSIS1/src/main/java/webroot/index.html
+++ b/LSIS1/src/main/java/webroot/index.html
@@ -7,7 +7,7 @@
         <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
         <script src="JavaScript/script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="CSS/style.css">
-        <script src="JavaScript/script.js"></script>
+        <script src="JavaScript/Script.js"></script>
 
         <title>Robot</title>
     </head>
