--- a/LSIS1/src/main/java/webroot/registerRobot.html
+++ b/LSIS1/src/main/java/webroot/registerRobot.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
-        <script src="JavaScript/registerRobot.js"></script>      
+        <script src="JavaScript/RegisterRobot.js"></script>      
     </head>    
     <body>  
         <div class='blog'>
@@ -30,11 +30,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <hr>
                         <form id="registerRobotForm" name="registerRobotForm" action="javascript:Enviar()">
                             <label for="idEquipaId" id="idEquipaL"> ID da Equipa:</label>
-                            <input type="text" id="idEquipaId" name="nome"/>
+                            <input type="text" id="idEquipaId" name="idEquipa"/>
                             <label for="nomeId" id="nomeL">Nome:</label>
-                            <input type="text" id="nomeId" name="nome"/>
+                            <input type="text" id="nomeId" name="nomeRobot"/>
                             <label for="macAddressId" id="macAddressL">Mac Address:</label>
-                            <input type="text" id="macAddressId" name="nome"/>
+                            <input type="text" id="macAddressId" name="macAddress"/>
                             <input type="submit" value="Registar" />                      
                         </form>
                     </div>
