--- a/LSIS1/src/main/java/webroot/RobotManagment.html
+++ b/LSIS1/src/main/java/webroot/RobotManagment.html
@@ -29,6 +29,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <p></p>
                         <button onclick="botaoRobotInfo();">Robot Info</button>
                         <input type="text" id="inputIdRobot" placeholder="ROBOT ID"/>
+                        <button onclick ="botaoEliminarRobot();"> Eliminar Robot </button>
+                        <input id="demo"/> 
                         <p></p>
                     </div>
                     <div class='column2'>  
