--- a/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
+++ b/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
@@ -33,34 +33,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     <div class='column2'>      
                         <h2 id="h2CompetitionTableInfo" style="display:none">Competitions info</h2> 
                         <p id="pCompetitionTableInfo" style="display:none">Competitions available at the moment</p>
-                        <table id ="tCompetitionTableInfo" style="display:none">
-                            <tr>
-                                <th>Id Competição</th>
-                                <th>Nome Competição</th> 
-                                <th>Data Criação</th>
-                            </tr>
-                            <tr>
-                                <th>1</th>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <th>2</th>
-                                <td></td>
-                                <td></td>
-                            </tr>
+                        <table id ="tCompetitionTableInfo" style="display:none">                           
                         </table>
                         <h2 id="h2CompetitionSubscribe" style="display:none">Competition Subscribe</h2> 
                         <p id="pCompetitionSubscribe" style="display:none"> Submit your subscription to a Competition, in order to be able to play in it! </p>
-                        <form id ="fCompetitionSubscription" name="CompetitionSubscriptionForm" style="display:none" action="javascript:alterarDados()">
+                        <form id ="fCompetitionSubscription" name="CompetitionSubscriptionForm" style="display:none" action="javascript:submeterDados()">
                             <label for="CompetitionId" id="competitionIdL">Id Competição</label>
-                            <input type="text" id="competitionId" name="id"/>
+                            <input type="text" id="competitionId" name="idCompeticao"/>
 
                             <label for="teamId" id="teamIdL">Id Equipa:</label>
                             <input type="text" id="teamNameId" name="teamId"/>
                             <input type="submit" value="Submeter">
                         </form>
-                        
+
                     </div>
                 </div>
             </div>
