--- a/LSIS1/src/main/java/webroot/RobotManagment.html
+++ b/LSIS1/src/main/java/webroot/RobotManagment.html
@@ -74,6 +74,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         </form>
                     </div>
                 </div>
+                <div class="row" id="infoPanel"></div>
             </div>
         </div>
     </body>
