--- a/LSIS1/src/main/java/webroot/Juri.html
+++ b/LSIS1/src/main/java/webroot/Juri.html
@@ -20,6 +20,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div>Registar Competição</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="RegisterRound.html"><div>Registar Ronda</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Search.html"><div>Procurar Equipa/Robot</div></a>
+                    <a class="button button--pan" style="color:black" id="button" href="Results.html"><div>Results</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Info.html"><div>Informações</div></a>
                     <div class="track"></div>
                     <div class="car">
