--- a/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
+++ b/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
@@ -33,7 +33,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     <div class='column2'>      
                         <h2 id="h2CompetitionTableInfo" style="display:none">Competitions info</h2> 
                         <p id="pCompetitionTableInfo" style="display:none">Competitions available at the moment</p>
-                        <table id ="tCompetitionTableInfo" style="display:none">                           
+                        <table id ="tCompetitionTableInfo" style="display:none"> 
+                            <theader id="aa" style="display:none" ><tr><th>Id Competicao</th><th>Nome Competicao</th><th>Data Criacao</th></tr></theader>
+                            <tbody id="listaCompeticoes">  </tbody>  
                         </table>
                         <h2 id="h2CompetitionSubscribe" style="display:none">Competition Subscribe</h2> 
                         <p id="pCompetitionSubscribe" style="display:none"> Submit your subscription to a Competition, in order to be able to play in it! </p>
