--- a/LSIS1/src/main/java/webroot/Search.html
+++ b/LSIS1/src/main/java/webroot/Search.html
@@ -25,82 +25,24 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>      
                 <div class='row'>
                     <div class='column1'>
-                        <button onclick="botaoParkInfo();">Park Info</button>
+                        <button onclick="botaoTeamInfo();">Team List</button>
                         <p></p>
-                        <button onclick="botaoClientInfo();">Team Info</button>
-                        <input type="text" id="inputIdCliente" placeholder="TEAM ID"/>
-                        <p></p>
-                        <button onclick="botaoRobotInfo();">Robot Info</button>
-                        <input type="text" id="inputIdRobot" placeholder="ROBOT ID"/>
-                        <p></p>
-                        <button id="botaoCb" onclick="botaoClientBillInfo();"> Client Bill Info</button>
+                        <button onclick="botaoRobotInfo();">Robot List</button>
                         <p></p>
                     </div>
                     <div class='column2'>                
-                        <h2 id="h2ClientInfo" style="display:none">Team Info</h2> 
-                        <p id="pClientInfo" style="display:none"> If you wish to change your data, just fill in the label you want and click on the button "Alterar"</p>
-                        <form id ="fTeamInfo" name="teamInfoForm" style="display:none" action="javascript:alterarDados()">
-                            <label for="teamId" id="teamL">Id Equipa:</label>
-                            <input type="text" id="teamId" name="id"/>
-
-                            <label for="teamNameId" id="teamNameL">Team Name:</label>
-                            <input type="text" id="teamNameId" name="teamName"/>
-                            <input type="submit" value="Alterar">
-                        </form>
-                        <h2 id="h2RobotInfo" style="display: none">Robot Info</h2>
-                        <p id="pRobotInfo" style="display:none">All the info you need about that awesome robot!</p>
-                        <form id ="fRobotInfo" name="RobotInfoForm" style="display:none" action="javascript:alterarDados()">
-                            <label for="robotId" id="robotIdL">Id Robot:</label>
-                            <input type="text" id="robotId" name="id"/>
-
-                            <label for="robotTeamId" id="robotTeamIdL">Team ID:</label>
-                            <input type="text" id="teamNameId" name="teamName"/>
-                            
-                            <label for="robotNameId" id="robotNameL">Robot Name:</label>
-                            <input type="text" id="robotNameId" name="Robotname"/>
-                            
-                            <label for="macAddressId" id="macAddressIdL">Mac Address:</label>
-                            <input type="text" id="macAddressId" name="MacAddress"/>
-                        </form>
-
-
-                        <h2 id="h2ParkInfo" style="display:none">Park info</h2> 
-                        <p id="pParkInfo" style="display:none">Parking lot's capacity info</p>
-                        <table id ="tParkInfo" style="display:none">
-                            <tr>
-                                <th>Pisos</th>
-                                <th>Zona A</th> 
-                                <th>Zona B</th>
-                                <th>Zona C </th>
-                            </tr>
-                            <tr>
-                                <th>1</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <th>2</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </table> 
-                        <h2 id="h2ClientBillInfo" style="display:none">Bill Info</h2> 
-                        <p id="pClientBillInfo" style="display:none"> Info about client's bill</p>
-                        <form id ="fClientBillInfo" name="clientBillInfoForm" method="GET" style="display:none">
-                            <label for="dataInicioId" id="dataInicioL">Data de Início:</label>
-                            <input type="text" id="dataInicioId" placeholder="Data" name="dataInicio"/>
-
-                            <label for="dataFimId" id="dataFimL">Data de Fim:</label>
-                            <input type="text" id="dataFimId" placeholder="Data" name="dataFim"/>
-
-                            <label for="valorId" id="valorL">Valor:</label>
-                            <input type="text" id="valorId" placeholder="Valor" name="valor"/> 
-
-                            <label for="viaturaId" id="viaturaL">Nº de Identificação da Viatura:</label>
-                            <input type="text" id="viaturaId" placeholder="Viatura" name="numeroIdentificacaoDaViatura"/> 
-                        </form>
+                        <h2 id="h2TeamInfo" style="display:none">List of Teams</h2> 
+                        <p id="pTeamInfo" style="display:none"> List of all Teams registered</p>
+                        <table id ="tTeamInfo" style="display:none"> 
+                            <theader id="tHeaderEquipasId" style="display:none" ><tr><th>Id Equipa</th><th>Nome Equipa</th></tr></theader>
+                            <tbody id="listaEquipas">  </tbody>  
+                        </table>
+                        <h2 id="h2RobotInfo" style="display: none">List of bots</h2>
+                        <p id="pRobotInfo" style="display:none">List of all bots registered</p>
+                        <table id ="tRobotInfo" style="display:none"> 
+                            <theader id="tHeaderRobotsId" style="display:none" ><tr><th>Id Robot</th><th>Id Equipa</th><th>Nome Robot</th><th>Mac Address</th></tr></theader>
+                            <tbody id="listaRobots">  </tbody>  
+                        </table>
                     </div>
                 </div>
             </div>
