Páginas em falta, relativas aos resultados

--- a/LSIS1/src/main/java/webroot/Login.html
+++ b/LSIS1/src/main/java/webroot/Login.html
@@ -2,7 +2,7 @@
 <html lang="pt" >
     <head>
         <meta charset="UTF-8">
-        <title>PaginaInicial</title>
+        <title>Login</title>
         <meta name="viewport" content="width=device-width">
         <link href="CSS/Login.css" rel="stylesheet" type="text/css"/>
         <script src="../javascript/initial.js"></script>
@@ -16,7 +16,7 @@
 
         <div id="box-login">
             <form id="formularioLogin" name="formularioLogin" method="POST"> 
-
+                <h2 style='margin-bottom: 30px;'>Login into your account</h2>
                 <div class="form-field">
                     <input id="userlogin" name="userlogin" type="text" placeholder="Username" required/> 
                 </div>
@@ -28,7 +28,7 @@
                     <input type="button" class="btn" id="buttonLogin" name="buttonLogin" value="Log in" onclick="login()"/>
                 </div>
                 <div>
-                    <a id="NãoRegistadoLink" style="text-decoration: underline black" href="RegistarCliente.html">Não está registado? Clique aqui</a>
+                    <a id="NãoRegistadoLink" style="text-decoration: underline black" href="RegisterTeam.html">Não está registado? Clique aqui</a>
                 </div>
             </form>
         </div> 
