--- a/LSIS1/src/main/java/webroot/CompetitionManagment.html
+++ b/LSIS1/src/main/java/webroot/CompetitionManagment.html
@@ -37,6 +37,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <button onclick="botaoRoundShowDetails();">Round Details</button>
                         <input type="text" id="inputIdRound" placeholder="ROUND ID"/>
                         <p></p>
+                        <button onclick="botaoCompetitionListTeams();">Competition Team List</button>
+                        <p></p>
+                        <button onclick="botaoCompetitionListTeamDetails();">Competition Team List Details</button>
+                        <input type="text" id="inputIdTeam" placeholder="TEAM ID"/>
+                        <p></p>
                     </div>
                     <div class='column2'>      
                         <h2 id="h2CompetitionTableInfo" style="display:none">Competitions info</h2> 
@@ -45,6 +50,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <theader id="tHeaderId" style="display:none" ><tr><th>Id Competicao</th><th>Nome Competicao</th><th>Data Criacao</th></tr></theader>
                             <tbody id="listaCompeticoes">  </tbody>  
                         </table>
+                        <!<!-- LISTA UMA COMPETICAO NO FORM, SELECT PELO SEU ID E TEM A OPCAO DE UPDATE E DELETE -->
                         <h2 id="h2CompetitionDetails" style="display:none">Competition Details</h2> 
                         <p id="pCompetitionDetails" style="display:none"> Details of the competition, where u can update and delete them! </p>
                         <form id ="fCompetitionDetails" name="CompetitionDetailsForm" style="display:none" action="javascript:submeterDados()">
@@ -65,6 +71,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <theader id="tHeaderRondasId" style="display:none" ><tr><th>Id Ronda</th><th>Id Competicao</th><th>Tipo de Ronda</th></tr></theader>
                             <tbody id="listaRondas">  </tbody> 
                         </table>
+                        <!<!-- LISTA UMA RONDA E DA UPDATE E DELETE -->
                         <h2 id="h2RoundDetails" style="display: none">Round</h2>
                         <p id="pRoundResults" style="display:none">The details of this round!</p>
                         <form id ="fRoundDetails" name="RoundDetailsForm" style="display:none" action="javascript:submeterDados()">
@@ -82,9 +89,31 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 <option value="Competicao">Competição</option>
                             </select> <br><br>
 
-
                             <input type="submit" value="AlterarRonda">
                             <input type="submit" value="DeleteRonda" style="color:red">
+                        </form>
+                        <!<!-- LISTA A TABELA ASSOCIACAO EQUIPA COMPETICAO TODA -->
+                        <h2 id="h2CompetitionListTeams" style="display: none">Competition's Teams List</h2>
+                        <p id="pCompetitionListTeams" style="display:none">All rounds from the chosen competition!</p>
+                        <table id ="tCompetitionListTeams" style="display:none">
+                            <!<!-- NAO PERCEBI ISTO NAO ALTEREI, MAS A IDEIA É APARECER AQUI TODAS AS EQUIPAS DA COMPETICAO ESCOLHIDA, SELECT da tabela AssossiacaoEquipaCompeticao atraves do ID da equipa -->
+                            <theader id="tHeaderEquipasId" style="display:none" ><tr><th>Id Ronda</th><th>Id Competicao</th><th>Tipo de Ronda</th></tr></theader>
+                            <tbody id="listaRondas">  </tbody> 
+                        </table>
+                        <!<!-- LISTA UMA ASSOCIACAO EQUIPA COMPETICAO PELO ID E PODE LEVAR UPDATE E DELETE -->
+                        <h2 id="h2CompetitionTeamDetails" style="display: none">Round</h2>
+                        <p id="pCompetitionTeamDetails" style="display:none">The details of this round!</p>
+                        <form id ="fCompetitionTeamDetails" name="CompetitionDetailsForm" style="display:none" action="javascript:submeterDados()">
+                            <label for="CompetitionTeamAssociationId" id="CompetitionTeamAssociationIdL">Id Associacao:</label>
+                            <input type="text" id="competitionTeamAssociationId" name="competitionTeamAssociationId"/>
+                            
+                            <label for="CompetitionTeamId" id="CompetitionTeamIdL">Id Equipa:</label>
+                            <input type="text" id="competitionTeamId" name="competitionTeamId"/>
+
+                            <label for="competitionTeamNameId" id="competitionTeamNameIdL">Nome Equipa:</label>
+                            <input type="text" id="competitionTeamNameId" name="competitionTeamNameId"/>
+                            <input type="submit" value="Alterar Equipa">
+                            <input type="submit" value="Delete Equipa da Competição" style="color:red">
                         </form>
                     </div>
                 </div>
